[package]
name = "govee-rs"
version = "0.1.1"
authors = ["Matt Chun-Lum <matt@questionable.engineering>"]
edition = "2018"
description = "A simple interface to Govee devices via their developer API"
rust-version = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
mockito = "1.1.0"
